# OpusLibAndroidDemo

./: .gitattributes  .gitignore  LICENSE  README.md  local.properties
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zhonghua/demo/opusaudiodemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: opus-lib.cpp
app/src/main/cpp/opus/include/: opus_projection.h  opus_types.h
app/src/main/java/vip/inode/demo/opusaudiodemo/: MainActivity.kt
app/src/main/java/vip/inode/demo/opusaudiodemo/presenter/: DecodeOpusPresenter.kt
app/src/main/java/vip/inode/demo/opusaudiodemo/utils/: OpusPlayTask.kt  OpusRecorderTask.kt  OpusUtils.kt  Uilts.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zhonghua/demo/opusaudiodemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
